WIP: process payments
