# server/src/billable/billable.controller.ts
@@ -1,7 +1,8 @@
-import { Controller, Get, UseGuards } from '@nestjs/common';
+import { Body, Controller, Get, Post, UseGuards } from '@nestjs/common';
 import { JwtAuthGuard } from '../auth/jwt-auth.guard';
 import { BillableService } from './billable.service';
 import { FindAllBillableResponseDto } from './dto/find-all.dto';
+import { ProcessPaymentDto } from './dto/process-payment.dto';
 import { ApiExtraModels, ApiResponse } from '@nestjs/swagger';
 
 @UseGuards(JwtAuthGuard)
@@ -18,5 +19,10 @@ export class BillableController {
   @Get('/')
   async findAll(): Promise<FindAllBillableResponseDto[]> {
     return await this.billableService.findAll();
+  }
+
+  @Post('pay')
+  async processPayment(@Body() body: ProcessPaymentDto) {
+    await this.billableService.processPayment(body);
   }
 }
