# server/src/billable/billable.service.ts
@@ -1,7 +1,8 @@
-import { Injectable } from '@nestjs/common';
+import { Injectable, NotFoundException } from '@nestjs/common';
 import { PrismaService } from '../prisma/prisma.service';
-import { BILLABLE_STATUS } from '@prisma/client';
+import { BILLABLE_STATUS, Prisma } from '@prisma/client';
 import { FindAllBillableResponseDto } from './dto/find-all.dto';
+import { ProcessPaymentDto } from './dto/process-payment.dto';
 
 type BillableDueType = {
   type: 'AfterDue' | 'BeforeDue';
@@ -10,6 +11,48 @@ type BillableDueType = {
 @Injectable()
 export class BillableService {
   constructor(private readonly prismaService: PrismaService) {}
+
+  async processPayment({ amount, id }: ProcessPaymentDto) {
+    try {
+      await this.prismaService.withTransaction(async (prisma) => {
+        const data = await prisma.billable.findUnique({
+          where: {
+            id,
+            status: BILLABLE_STATUS.ACTIVE,
+          },
+          select: {
+            amount: true,
+          },
+        });
+
+        if (!data)
+          throw new NotFoundException(
+            'This billable record is not found or it has been inactive.',
+          );
+
+        const newAmount = data.amount - amount;
+
+        await Promise.all([
+          prisma.billable.update({
+            where: {
+              id,
+            },
+            data: {
+              amount: newAmount,
+            },
+          }),
+          prisma.payments.create({
+            data: {
+              amount,
+              billableId: id,
+            },
+          }),
+        ]);
+      });
+    } catch (e) {
+      throw e;
+    }
+  }
 
   async findAll(): Promise<FindAllBillableResponseDto[]> {
     try {
@@ -21,9 +64,14 @@ export class BillableService {
           id: true,
           dueDate: true,
           status: true,
-          room: {
+          amount: true,
+          payments: {
             select: {
               amount: true,
+              paidOn: true,
+            },
+            orderBy: {
+              paidOn: Prisma.SortOrder.desc,
             },
           },
           user: {
@@ -36,11 +84,8 @@ export class BillableService {
 
       return result.map((res) => {
         return {
-          amount: res.room.amount,
-          dueDate: res.dueDate,
-          status: res.status,
+          ...res,
           userName: res.user.name,
-          id: res.id,
         };
       });
     } catch (e) {
