# server/swagger.json
@@ -267,6 +267,27 @@
           }
         }
       }
+    },
+    "/api/billable/pay": {
+      "post": {
+        "operationId": "BillableController_processPayment",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ProcessPaymentDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        }
+      }
     }
   },
   "info": {
@@ -468,6 +489,22 @@
           "INACTIVE"
         ]
       },
+      "FindAllPaymentsForFindAllBillableResponseDto": {
+        "type": "object",
+        "properties": {
+          "paidOn": {
+            "format": "date-time",
+            "type": "string"
+          },
+          "amount": {
+            "type": "number"
+          }
+        },
+        "required": [
+          "paidOn",
+          "amount"
+        ]
+      },
       "FindAllBillableResponseDto": {
         "type": "object",
         "properties": {
@@ -478,11 +515,36 @@
             "format": "date-time",
             "type": "string"
           },
+          "amount": {
+            "type": "number"
+          },
           "status": {
             "$ref": "#/components/schemas/BILLABLE_STATUS"
           },
           "userName": {
             "type": "string"
+          },
+          "payments": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FindAllPaymentsForFindAllBillableResponseDto"
+            }
+          }
+        },
+        "required": [
+          "id",
+          "dueDate",
+          "amount",
+          "status",
+          "userName",
+          "payments"
+        ]
+      },
+      "ProcessPaymentDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number"
           },
           "amount": {
             "type": "number"
@@ -490,9 +552,6 @@
         },
         "required": [
           "id",
-          "dueDate",
-          "status",
-          "userName",
           "amount"
         ]
       }
